Main content page draft, added api service

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,1 +1,4 @@
-<p>main-content works!</p>
+<mat-form-field class="example-full-width" appearance="fill">
+  <mat-label>Search</mat-label>
+  <input type="text" (keyup)="onSearchQueryChange($event)" matInput placeholder="Ex. Angular">
+</mat-form-field>
