Added effect and store repositories

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -2,3 +2,5 @@
   <mat-label>Search</mat-label>
   <input type="text" (keyup)="onSearchQueryChange($event)" matInput placeholder="Ex. Angular">
 </mat-form-field>
+
+<mat-paginator></mat-paginator>
