--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -10,8 +10,10 @@
 }
 
 .header {
+  background: #f1f1f1;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   height: $header-height;
 }
 
