--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -2,5 +2,5 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-progress-bar {
-  position: absolute;
+  position: absolute !important;
 }
