--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -16,7 +16,11 @@
 
 
 <div class="repository-list">
-  <app-repository-item *ngFor="let repository of repositories$ | async" [repository]="repository"></app-repository-item>
+  <app-repository-item
+    *ngFor="let repository of repositories$ | async"
+    [repository]="repository"
+    (click)="onSelectRepository(repository)"
+  ></app-repository-item>
 </div>
 
 <mat-paginator class="footer"
